- Do not check for m_bEOF when reading chunked data. m_bEOF is set true when read returns 0, which in chunked   data transfer indicates end of chunked data transfer.

BUG: 124593

svn path=/branches/KDE/3.5/kdelibs/; revision=707523